syntax = "proto3";
package logger;

message TargetInfo {
    float x = 1;
    float y = 2;
    float timestamp = 3;
}
